Fix tab to scroll horizontally when tab selector overflows (#204)

--- a/src/components/tab/tab.scss
+++ b/src/components/tab/tab.scss
@@ -63,6 +63,7 @@ gx-tab {
     display: flex;
     flex: 1;
     flex-direction: column;
+    overflow: hidden;
 
     --tab-scrollbar-background-color: var(
       --gx-scrollbar-background-color,
